# ComfyUI-OpenDiTWrapper

./: README.md  nodes.py  pyproject.toml  requirements.txt
configs/: t5-v1_1-xxl-encoder.json
examples/: opensoraPAB_example.json  opensora_img2vid_example_01.json  opensora_text2vid_example_01.json
opendit/core/: comm.py  pab_mgr.py
opendit/models/opensora/: rflow.py  stdit3.py  text_encoder.py  utils.py
